navbar and section one code

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,28 @@
 
   </head>
   <body>
+  <div class="large-12" id="top-nav">
+    <div class="row">
+      <div class="small-4 columns">
+        <a href="#"><img src="images/logo.png" alt=""></a>
+      </div>
+      <div class="small-8 columns">
+        <a href=""><img src="images/menu.png" alt=""></a>
+      </div>
+    </div>
+  </div>
+  <div class="large-12" id="top-content">
+    <div class="row">
+      <div class="medium-6 columns grid-container">
+        <img src="images/grid.png" id="gridimg" alt="">
+      </div>
+      <div class="medium-6 columns">
+        <h1>Grid Hosting</h1>
+        <p class="wt-l">We offer the most reliable hosting</p>
+        <a href="" class="cta">Pricing &amp; Plans</a>
+      </div>
+    </div>
+  </div>
 
 
 
