section two code

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,25 @@
       </div>
     </div>
   </div>
+  <div class="large-12" id="grid-content">
+    <div class="row">
+      <div class="medium-4 columns features fadeInBlock">
+        <img src="images/icon-1.png" alt="">
+        <span class="sub-title">It's fast</span>
+        <p>Grid hosting frees up resources....</p>
+      </div>
+      <div class="medium-4 columns features fadeInBlock">
+        <img src="images/icon-2.png" alt="">
+        <span class="sub-title">It's reliable</span>
+        <p>Grid hosting frees up resources....</p>
+      </div>
+      <div class="medium-4 columns features fadeInBlock">
+        <img src="images/icon-3.png" alt="">
+        <span class="sub-title">It's affordable</span>
+        <p>Grid hosting frees up resources....</p>
+      </div>
+    </div>
+  </div>
 
 
 
