section three and four code

--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,63 @@
     </div>
   </div>
 
+  <div class="large-12" id="video-content">
+    <div class="header-unit">
+      <div id="video-container">
+        <video autoplay loop class="fillWidth">
+          <source src="clouds.mp4" type="video/mp4"/>
+        </video>
+        <h4>LightSpeed Connectivity</h4>
+        <a href="#" id="play"><img src="images/play.png" alt=""></a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="large-12" id="support-content">
+    <div class="row">
+      <div class="medium-6 columns">
+        <embed src="watch.svg" id="svg" type="">
+      </div>
+      <div class="medium-6 columns">
+        <h1>Fast support</h1>
+        <p class="wt-l">
+          Need help? loooo ooooooo ooong word
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="large-12" id="testimonial-content">
+    <!-- weird trick -->
+    <img style="height: 1px;width: 1px;position: fixed;" alt="">
+    <div class="row">
+      <div class="medium-6 columns">
+        <div class="row">
+          <div class="medium-4 columns auth-img">
+            <img src="images/author-1.img" alt="">
+          </div>
+          <div class="medium-8 columns auth-content">
+            <span class="title">Hernan K</span>
+            <p>Title</p>
+            <span class="quote">loooo oooooo oooo oo ooooog word</span>
+          </div> 
+        </div>
+      </div>
+      <div class="medium-6 columns">
+        <div class="row">
+          <div class="medium-4 columns auth-img">
+            <img src="images/author-2.img" alt="">
+          </div>
+          <div class="medium-8 columns auth-content">
+            <span class="title">Hernan K</span>
+            <p>Title</p>
+            <span class="quote">loooo oooooo oooo oo ooooog word</span>
+          </div> 
+        </div>
+      </div>
+    </div>
+  </div>
 
 
     <script src="js/foundation.min.js"></script>
