--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
   <div class="large-12" id="support-content">
     <div class="row">
       <div class="medium-6 columns">
-        <embed src="watch.svg" id="svg" type="">
+        <embed src="clock.svg" id="svg" type="">
       </div>
       <div class="medium-6 columns">
         <h1>Fast support</h1>
@@ -90,7 +90,7 @@
       <div class="medium-6 columns">
         <div class="row">
           <div class="medium-4 columns auth-img">
-            <img src="images/author-1.img" alt="">
+            <img src="images/author-1.png" alt="">
           </div>
           <div class="medium-8 columns auth-content">
             <span class="title">Hernan K</span>
@@ -102,7 +102,7 @@
       <div class="medium-6 columns">
         <div class="row">
           <div class="medium-4 columns auth-img">
-            <img src="images/author-2.img" alt="">
+            <img src="images/author-2.png" alt="">
           </div>
           <div class="medium-8 columns auth-content">
             <span class="title">Hernan K</span>
