--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
         <a href="#"><img src="images/logo.png" alt=""></a>
       </div>
       <div class="small-8 columns">
-        <a href=""><img src="images/menu.png" alt=""></a>
+        <a href=""><img src="images/menu.png" id="menu" alt=""></a>
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@
       <div class="medium-6 columns grid-container">
         <img src="images/grid.png" id="gridimg" alt="">
       </div>
-      <div class="medium-6 columns">
+      <div class="medium-6 columns grid-container-right">
         <h1>Grid Hosting</h1>
         <p class="wt-l">We offer the most reliable hosting</p>
         <a href="" class="cta">Pricing &amp; Plans</a>
