--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
     </div>
   </div>
   <div class="large-12" id="grid-content">
+    <h2>What is it?</h2>
     <div class="row">
       <div class="medium-4 columns features fadeInBlock">
         <img src="images/icon-1.png" alt="">
